source/stylesheets/objects/_blog.scss
.main-content.blog{
  @include outer-container;
  font-family: $font-secondary;

  @include media($design-edge) {
    padding: 0 em(15);
  }

  .articles {
    @include span-columns(8 of 12);
    padding-top: em(25);

    @include media($design-edge) {
      @include span-columns(12 of 12);
    }

    .header{
      @include row();
    }

    .article-title {
      @include span-columns(10 of 12);
      display: inline-block;
      font-size: em(28);
      vertical-align: top;
      margin: 0;

      a{
        color: $color-dark-blue;
      }
    }

    .author{
      color: $font-color;
    }

    p {
      text-align: justify;
    }

    .comments, .tags {
      display: block;

      a {
        text-decoration: underline;
      }
    }

    img {
      @include span-columns(12 of 12);
      @include omega;
    }

    .tag{
      display: inline-block;
      font-size: em(16);
      font-weight: bold;
      margin-right: em(10);
    }

    .comments {
      margin-right: em(60);
    }
  }

  .side-columns {
    @include span-columns(3 of 12);

    @include media($design-edge) {
      @include span-columns(12 of 12);
    }

    .side-header{
      font-size: em(22);
      margin-bottom: em(10);
    }

    .side-column{
      vertical-align: top;
      margin-bottom: em(20);

      @include media($design-edge) {
        @include span-columns(4 of 12);
      }

      a {
        font-size: em(18);
        font-weight: 600;
        color: $color-grey;

        &:hover {
          color: $color-blog;
          text-decoration: underline;
        }
      }

      .archive {
        margin-top: em(10);
      }

      .archive-article {
        line-height: em(14);
        margin-bottom: em(8);

        a {
          font-size: em(13);
        }
      }
    }
  }
}

